--- a/ssc.yaml
+++ b/ssc.yaml
@@ -271,7 +271,7 @@ dependencies:
   - urllib3=1.23=py36_0
   - wcwidth=0.1.7=py36_0
   - webencodings=0.5.1=py36_1
-  - werkzeug=0.14.1=py36_0
+  - werkzeug=1.0.1=py_0
   - wheel=0.32.3=py36_0
   - widgetsnbextension=3.4.2=py36_0
   - wrapt=1.10.11=py36h14c3975_2
